--- a/assets/styles.css
+++ b/assets/styles.css
@@ -52,15 +52,29 @@ h1 {
 .btn-check:checked+.btn-primary:focus,
 .btn-primary.active:focus,
 .btn-primary:active:focus,
-.show>.btn-primary.dropdown-toggle:focus {
+.show>.btn-primary.dropdown-toggle:focus{
     box-shadow: 0 0 0 0.25rem rgb(255, 31, 72, 0.5);
 }
+
+.form-control:focus {
+    color: #212529;
+    background-color: #fff;
+    border-color: rgb(255 168 185 / 50%);
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgb(255 168 185 / 50%);
+}
+
 
 .list-group-flush>.list-group-item:last-child {
     border-bottom-width: 1px;
     border-top-width: 1px;
 }
 
+#addItemToList{
+    font-size: 30px;
+    display: flex;
+    line-height: 24px;
+}
 .parent {
     background: white;
     pointer-events: none;
